# stash-house

./: .envrc  .gitignore  Cargo.toml  GEMINI.md  Makefile.am  README.md  bootstrap.sh  config.yaml  configure.ac  dirs.txt  go.mod  go.sum  requirements.txt
.gemini/: .geminiignore  GEMINI.md
.github/workflows/: latex-paper.yml  latex.yml  markdown.yml
cmd/: main.go  new.go  test2
cmd/diagram/: main.go
container/: Dockerfile  README.md
container/alpine/: Dockerfile  Makefile.am  README.md  docker-compose.yml
container/alpine/stash/: .ashrc
container/debian/: Dockerfile  Makefile.am
container/foks/: Containerfile
container/latex/: Dockerfile
demo/: README.md  demo_setup.sh
demo/00_installer/: install.sh
demo/00_setup/: README.md  gpg-tool.sh  install-client.sh
demo/01_locate/: README.md  files.txt  scan_local.sh
demo/01_locate/.files/: credentials  gcp-gcs-pso-11d22411ba83.json
demo/01_scanner/: README.md  scan_local.sh
demo/02_secure/: README.md
demo/03_safe_use/: README.md
docs/: README.md  abstract.md  keyringer.md  latex.txt  nostr.txt  password-store-readme.txt  pi-franklin.md  proposal1.txt  requirements.md  setup.md  shortcuts.md  stash.drawio  stash.md
docs/paper/: Makefile.am  README.md  bib.bib  output.txt  stash.tex
docs/paper/frontmatter/: title2.tex
docs/slides/: stash.tex
docs/slides-ec/: README.md
examples/: README.md
internal/: setup.sh
internal/database/: database.go  go.mod  go.sum
paper/: Makefile.am  aegis.tex  references.bib  stash-house.tex  stash.tex
paper/frontmatter/: title.tex  title2.tex
slides/: Makefile  Makefile.am  begin.tex  build.sh  stash.tex
slides/section1/: slide0.tex  slide1.tex  slide3.tex
slides/section2/: section2.tex  slide1.tex  slide2.tex  slide3.tex
slides/section3/: slide0.tex  slide2.tex  slide3.tex  slide4.tex  slide5.tex  slide6.tex
slides/section4/: slide0.tex  slide1.tex  slide2.tex
src/: main.rs
static/images/: README.md
terraform/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
terraform/aws/: main.tf  readme.txt  variables.tf
terraform/aws/.terraform/modules/: modules.json
terraform/aws/backend/: .terraform.lock.hcl  main.tf  variables.tf
terraform/test/: README.md
